[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/toolbox_project/scenes/ui/game/IconIntValue.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/toolbox_project/scenes/ui/game/AnimatedIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/toolbox_project/scenes/ui/game/GameUI.gd" type="Script" id=3]
[ext_resource path="res://addons/toolbox_project/scenes/ui/game/IconValue.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/toolbox_project/assets/theme.tres" type="Theme" id=6]

[node name="GameUI" type="CanvasLayer"]
layer = 10
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TopLeft" type="Control" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
mouse_filter = 2
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TopLeft"]
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconIntValue" parent="MarginContainer/TopLeft/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 2.0
margin_right = 54.0
margin_bottom = 29.0

[node name="IconHolder" parent="MarginContainer/TopLeft/HBoxContainer/IconIntValue" index="0"]
margin_right = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="AnimatedIcon" parent="MarginContainer/TopLeft/HBoxContainer/IconIntValue/IconHolder" index="0" instance=ExtResource( 2 )]
position = Vector2( 8, 0 )
scale = Vector2( 3, 3 )

[node name="Label" parent="MarginContainer/TopLeft/HBoxContainer/IconIntValue" index="1"]
margin_left = 26.0
margin_right = 54.0

[node name="IconValue" parent="MarginContainer/TopLeft/HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 264.0
margin_bottom = 32.0
size_flags_horizontal = 1

[node name="TopRight" type="Control" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TopRight"]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 9

[node name="ButtonRestart" type="Button" parent="MarginContainer/TopRight/HBoxContainer"]
margin_right = 87.0
margin_bottom = 49.0
text = "Restart"

[node name="ButtonPause" type="Button" parent="MarginContainer/TopRight/HBoxContainer"]
margin_left = 103.0
margin_right = 180.0
margin_bottom = 49.0
text = "Pause"

[connection signal="pressed" from="MarginContainer/TopRight/HBoxContainer/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="MarginContainer/TopRight/HBoxContainer/ButtonPause" to="." method="_on_ButtonPause_pressed"]

[editable path="MarginContainer/TopLeft/HBoxContainer/IconIntValue"]
